# Clustering_Review

./: .gitignore  CHANGELOG.md  CLAUDE.md  MOJAVE_XVIII_apjac230ft4_mrt.txt  README.md  cluster_code.py  find_clusters.py  server_update_exclude.txt  sync_server.sh
.claude/: settings.local.json
Results/0003+380u_1994.00-2026.00/: 0003+380u.1994.00-2026.00.merged_win_results.csv  0003+380u.1994.00-2026.00.merged_win_results.plotdata.npz  0003+380u.edit.iqu_cc.1994.00-2026.00.npz  config_win.json  history.txt  run_string.txt
Results/0003-066u_1994.00-2026.00/: 0003-066u.1994.00-2026.00.merged_win_results.csv  0003-066u.1994.00-2026.00.merged_win_results.plotdata.npz  0003-066u.edit.iqu_cc.1994.00-2026.00.npz  config_win.json  history.txt  run_string.txt
deploy/: README.md  config.yaml.example  mojave-results-sync.conf.example  mojave-results-sync.service  mojave-results-sync.timer  mojave-review.service  sync-results.sh
docs/: README.md  audience.md  deployment_phase2.md  plot_conventions.md  product_decisions.md  references.md  review_workflow.md  uncertainty_estimates.md
mojave_review/: pyproject.toml
mojave_review/src/mojave_review/: _logging.py  app.py  cli.py  config.py  wsgi.py
mojave_review/src/mojave_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mojave_review/src/mojave_review/assets/: dashboard.css  equal_aspect.js  keyboard.js  notes.css  resizable.css  resizable.js  subplot_resize.js  xy_equal_aspect.js
mojave_review/src/mojave_review/auth/: __init__.py  middleware.py  runtime.py  tokens.py
mojave_review/src/mojave_review/cli/: __init__.py  apply.py  audit_robust.py  difficulty.py  notes.py  prune.py  tokens.py
mojave_review/src/mojave_review/data/: assignments.py  difficulty.py  fits_cache.py  loader.py  source_params.py  window_fits.py  xviii.py
mojave_review/src/mojave_review/notes/: __init__.py  render.py  seed.py  store.py
mojave_review/src/mojave_review/plots/: _extent.py  compare_overlay.py  overlay.py  summary.py  synthesize_fits.py  uncertainty.py
mojave_review/src/mojave_review/recommendations/: aggregate.py  apply.py  notebook_format.py  schema.py  store.py
mojave_review/src/mojave_review/ui/: aggregation.py  callbacks.py  compare.py  compare_callbacks.py  dashboard.py  dashboard_callbacks.py  layout.py  nwin_callbacks.py  nwin_panel.py  recommendations_callbacks.py  recommendations_callbacks_admin.py  recommendations_panel.py  urls.py
mojave_review/tests/: test_aggregate.py  test_apply_backup_plots.py  test_apply_noop.py  test_apply_robust_consistency.py  test_assignments.py  test_audit_robust.py  test_cluster_robust_rows.py  test_difficulty.py  test_epoch_comment_rows.py  test_notes.py  test_overlay_cc_color.py  test_prune.py  test_reviewer_counts.py  test_source_picker_labels.py  test_stage3_apply_meta.py  test_uncertainty.py  test_url_prefix.py  test_window_fits.py  test_xviii.py
server_sync/: README.md  mojave-recs.prf  server_update_exclude.txt  sync_server.sh
(+79 files in other folders)
