[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mojave-review"
version = "0.1.0"
description = "Interactive web review tool for MOJAVE radio jet clustering results."
requires-python = ">=3.10"
dependencies = [
    "dash>=2.17",
    "plotly>=5.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "astropy>=6.0",
    "requests>=2.31",
]

[project.scripts]
mojave-review = "mojave_review.cli:main"
mojave-apply  = "mojave_review.cli.apply:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mojave_review = ["assets/*"]
