[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mojave-review"
version = "0.1.0"
description = "Interactive web review tool for MOJAVE radio jet clustering results."
requires-python = ">=3.10"
dependencies = [
    "dash>=2.17",
    "plotly>=5.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",        # FFT-convolve in plots/synthesize_fits.py
    "astropy>=6.0",
    "requests>=2.31",
    "pyyaml>=6.0",        # tokens.yaml + (phase 2) config.yaml
]

[project.scripts]
mojave-review        = "mojave_review.cli:main"
mojave-apply         = "mojave_review.cli.apply:main"
mojave-review-tokens = "mojave_review.cli.tokens:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mojave_review = ["assets/*"]
