[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mojave-review"
version = "0.1.0"
description = "Interactive web review tool for MOJAVE radio jet clustering results."
requires-python = ">=3.10"
dependencies = [
    "dash>=2.17",
    "plotly>=5.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",        # FFT-convolve in plots/synthesize_fits.py
    "contourpy>=1.1",     # contour polylines in plots/overlay.py (small payloads)
    "flask-compress>=1.14",  # gzip callback payloads (overlay figures)
    "astropy>=6.0",
    "requests>=2.31",
    "pyyaml>=6.0",        # tokens.yaml + (phase 2) config.yaml
]

[project.optional-dependencies]
# Production WSGI server. Install with `pip install -e .[server]` on
# the deploy host so the systemd unit can call `gunicorn`.
server = ["gunicorn>=21"]

[project.scripts]
mojave-review             = "mojave_review.cli:main"
mojave-apply              = "mojave_review.cli.apply:main"
mojave-review-tokens      = "mojave_review.cli.tokens:main"
mojave-review-notes       = "mojave_review.cli.notes:main"
mojave-review-prune-drafts = "mojave_review.cli.prune:main"
mojave-review-audit-robust = "mojave_review.cli.audit_robust:main"
mojave-review-difficulty   = "mojave_review.cli.difficulty:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mojave_review = ["assets/*", "data/*.txt"]
